Fix also invite flow on mobile.

--- a/scss/partials/_onboard_wrapper.scss
+++ b/scss/partials/_onboard_wrapper.scss
@@ -165,6 +165,10 @@ div.onboard-email-container {
 div.onboard-lander {
   text-align: center;
 
+  @include mobile() {
+    padding: 104px 16px 24px;
+  }
+
   div.main-cta {
     @include mobile() {
       padding-top: 54px;
@@ -880,10 +884,6 @@ div.onboard-lander {
   }
 
   @include mobile() {
-    &.lander {
-      padding: 104px 16px 24px;
-    }
-
     div.main-cta {
       padding-top: 0;
       div.mobile-header {
